Make home text left aligned with fixed margin to the digit dot

--- a/public/sass/home.sass
+++ b/public/sass/home.sass
@@ -33,6 +33,10 @@ html, .container-home
     justify-content: center
     .digit
        margin-top: -3px
+
+.home-paragraph
+    text-align: left
+    margin-left: 1rem       
 .wrapper2, .wrapper4, .wrapper6
     display: grid
     grid-template-columns: 1fr 9fr
